# useful-sql

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  useful_sql_code.sql
python/: Dockerfile  requirements.txt
python/adventureworks/: load_data.py
